[package]
name = "pyo3-err-bridge"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = { version = "1.0.102", optional = true }
backtrace = { version = "0.3.76", optional = true }
btparse = { version = "0.2.0", optional = true }
color-eyre = { version = "0.6.5", default-features = false, optional = true }
eyre = { version = "0.6.12", default-features = false, optional = true }
pyo3 = { git = "https://github.com/Icxolu/pyo3", branch = "set-traceback" }

[features]
# standard backtrace conversion using btparse
std = ["dep:btparse"]
# error conversion for anyhow (uses std backtraces)
anyhow = ["dep:anyhow", "std"]
# error conversion for color-eyre (uses the `backtrace` crate)
color-eyre = ["dep:eyre", "dep:color-eyre", "dep:backtrace"]

[dev-dependencies]
assertables = "9.8.6"
regex = "1.12.3"
